--- a/index.html
+++ b/index.html
@@ -17,7 +17,122 @@
             width: 100px;
             background: rgb(78, 78, 243);
         }
-        button.three {
+        button.three {<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+        :root {
+            --primary-purple: #7b34dd;
+            --secondary-purple: #9932cc;
+            --accent-purple: #ba55d3;
+            --light-purple: #e6e6fa;
+            --dark-purple: #4b0082;
+            --text-color: #2c2c2c;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Quicksand', sans-serif;
+            background-color: var(--light-purple);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            padding: 2rem;
+            line-height: 1.6;
+        }
+
+        .container {
+            background-color: white;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(123, 52, 221, 0.2);
+            padding: 2rem;
+            width: 100%;
+            max-width: 500px;
+        }
+
+        h1 {
+            color: var(--dark-purple);
+            margin-bottom: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            font-family: 'Outfit', sans-serif;
+            font-weight: 700;
+        }
+
+        hr {
+            border: none;
+            height: 3px;
+            background: linear-gradient(to right, var(--primary-purple), var(--accent-purple));
+            margin: 1rem 0;
+            width: 100%;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            width: 100%;
+        }
+
+        .btn {
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            width: 100%;
+        }
+
+        .btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 8px rgba(123, 52, 221, 0.3);
+        }
+
+        .btn-michigan {
+            background: linear-gradient(135deg, var(--primary-purple), var(--secondary-purple));
+            color: white;
+        }
+
+        .btn-emoji {
+            background: linear-gradient(135deg, var(--secondary-purple), var(--accent-purple));
+            color: white;
+        }
+
+        .btn-poetry {
+            background: linear-gradient(135deg, var(--accent-purple), var(--dark-purple));
+            color: white;
+        }
+    </style>
+    <title>Home</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Home</h1>
+        <hr>
+        <div class="button-container">
+            <a href="apeen.html"><button class="btn btn-michigan">Michigan Quiz</button></a>
+            <a href="opal.html"><button class="btn btn-emoji">Emoji Clicker</button></a>
+            <a href="one.html"><button class="btn btn-poetry">Poetry</button></a>
+        </div>
+    </div>
+    <script src="banana.js"></script>
+</body>
+</html>
             height: 50px;
             width: 100px;
             background: rgb(193, 94, 220);
