--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <a href="apeen.html"><button class="btn btn-michigan">Michigan Quiz</button></a>
             <a href="opal.html"><button class="btn btn-emoji">Emoji Clicker</button></a>
             <a href="one.html"><button class="btn btn-poetry">Poetry</button></a>
+            <a href="kitty.html"><button class="btn btn-michigan">Kitty Tycoon</button></a>
         </div>
     </div>
     <script src="banana.js"></script>
