--- a/kitty.html
+++ b/kitty.html
@@ -244,7 +244,7 @@
     <button onclick="location.reload()">Try Again</button>
   </div>
 
-  <script src="decipher.js"></script>
+  <script src="kitty.js"></script>
 </body>
 
 </html>
