--- a/apeen.html
+++ b/apeen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Poetry</title>
+    <title>Michigan Game</title>
 </head>
 <body style="text-align: center;">
    <img src="pres.png" width="900" height="480">
