--- a/kitty.html
+++ b/kitty.html
@@ -108,7 +108,7 @@
       background-position: center;
       box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease;
-      background-image: url('download.jpg'); /* Replace with your image URL */
+      background-image: url('download.jpg'); 
     }
 
     #click-button:hover {
@@ -126,7 +126,7 @@
 
     .happiness-bar {
       height: 100%;
-      background-image: linear-gradient(to right, #f00, #ff0, #0f0); /* Example gradient */
+      background-image: linear-gradient(to right, #f00, #ff0, #0f0); 
       animation: progress-bar-animation 2s linear;
     }
 
@@ -229,12 +229,8 @@
   </div>
 
   <div id="victory" class="container">
-    <h1>Is it Victory?</h1>
+    <h1>Victory!</h1>
     <p>Congratulations! You've built 100 factories but the Kitty Cops have finally caught Mr. Penguino.</p>
-    <p>Now let's see if you can escape the police.</p>
-    <a href="Game3.html" style="margin-left: 20px;">
-      <button>Escape from the Popo</button>
-    </a>
   </div>
 
   <div id="game-over" class="container">
