--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <a href="opal.html"><button class="btn btn-emoji">Emoji Clicker</button></a>
             <a href="one.html"><button class="btn btn-poetry">Poetry</button></a>
             <a href="kitty.html"><button class="btn btn-michigan">Kitty Tycoon</button></a>
-            <a href="kitty.html"><button class="btn btn-michigan">A 2048</button></a>
+            <a href="twenty.html"><button class="btn btn-michigan">A 2048</button></a>
         </div>
     </div>
     <script src="banana.js"></script>
