--- a/twenty.html
+++ b/twenty.html
@@ -20,6 +20,6 @@
         </div>
         <div class="game-over" style="display: none;">Game Over!</div>
       </div>      
-  <script src="game2.js"></script>
+  <script src="twenty.js"></script>
 </body>
 </html>
