--- a/twenty.html
+++ b/twenty.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 style="text-align: center;">Welcome to impossible 2048!</h1>
+  <p>Made by: BBN</p>
     <div class="game-container">
         <div class="grid-container">
           <div class="grid">
