--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <h1>Home</h1>
         <hr>
         <div class="button-container">
-            <a href="apeen.html"><button class="btn btn-michigan">Michigan Quiz</button></a>
-            <a href="opal.html"><button class="btn btn-emoji">Emoji Clicker</button></a>
+<!--             <a href="apeen.html"><button class="btn btn-michigan">Michigan Quiz</button></a> -->
+            <a href="https://oareyna.github.io/MyLife/"><button class="btn btn-emoji">My Life</button></a>
             <a href="one.html"><button class="btn btn-poetry">Poetry</button></a>
             <a href="kitty.html"><button class="btn btn-michigan">Kitty Tycoon</button></a>
             <a href="twenty.html"><button class="btn btn-michigan">A 2048</button></a>
