--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <a href="https://oareyna.github.io/MyLife/"><button class="btn btn-emoji">My Life</button></a>
             <a href="one.html"><button class="btn btn-poetry">Poetry</button></a>
             <a href="kitty.html"><button class="btn btn-michigan">Kitty Tycoon</button></a>
-            <a href="twenty.html"><button class="btn btn-michigan">A 2048</button></a>
+            <a href="story.html"><button class="btn btn-michigan">The Reyna Articles</button></a>
         </div>
     </div>
     <script src="banana.js"></script>
