--- a/one.html
+++ b/one.html
@@ -7,11 +7,11 @@
     <title>Poetry</title>
     <style>
         :root {
-            --background-color: #f4f4f8;
-            --text-primary: #2c3e50;
-            --text-secondary: #7f8c8d;
-            --accent-color: #6a5acd;
-            --line-color: #9932cc;
+            --background-color: #3d2f4d;
+            --text-primary: #e8e0f0;
+            --text-secondary: #b8a8c8;
+            --accent-color: #9b88b0;
+            --line-color: #7a6690;
         }
 
         * {
@@ -27,14 +27,16 @@
             color: var(--text-primary);
             max-width: 800px;
             margin: 0 auto;
-            padding: 2rem;
+            padding: 2rem 1.5rem;
         }
 
         .poetry-container {
-            background-color: white;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            background-color: #2a1f38;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
             border-radius: 10px;
-            padding: 3rem;
+            padding: 3rem 2.5rem;
+            overflow-wrap: break-word;
+            word-wrap: break-word;
         }
 
         h1 {
@@ -63,9 +65,11 @@
         pre {
             white-space: pre-wrap;
             word-wrap: break-word;
+            overflow-wrap: break-word;
             font-family: 'Merriweather', serif;
             font-size: 1rem;
             color: var(--text-primary);
+            max-width: 100%;
         }
 
         h2 {
@@ -183,7 +187,7 @@
 
         The push in your voice
         You screaming in pain but keep the words flowing
-        It takes everything in me to not scream “Stop”
+        It takes everything in me to not scream "Stop"
         Because I can't take it no more
         If I hear another quiver
         No amount drains would be able to contain
@@ -202,7 +206,7 @@
         No sight of what is you or the dirt we step on
         What is life built out of?
         Is it greatness, or just complex breathing?
-        “We think, therefore we are”
+        "We think, therefore we are"
         Or do we just simply think too much, and create meaning out of the leaves that spin out of cycle, the stars that happen to perfectly align, the numbers that just seem bound to be around
         They don't mean anything of importance, but beings are so insecure, and live with a paradox of choices
         That nothing suddenly has to mean something in your world of just complex inhaling
